docs/tests/parser/functions/invalid/FuncParamExtraParens.b
fn int foo((int a), int b) {
}
